[gd_scene load_steps=3 format=2]

[ext_resource path="res://Editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://Sound/SFX/metronome_click.wav" type="AudioStream" id=2]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseSongFile" type="FileDialog" parent="."]
margin_left = 975.0
margin_top = 50.0
margin_right = 1290.0
margin_bottom = 575.0
rect_min_size = Vector2( 186, 0 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Godot Games/GGJ 2020"
current_path = "/Godot Games/GGJ 2020/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChartInfo" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ChartInfo"]
margin_right = 269.0
margin_bottom = 14.0
text = "Chart Info"
align = 1

[node name="ChartName" type="HBoxContainer" parent="Panel/ChartInfo"]
margin_top = 18.0
margin_right = 269.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="Panel/ChartInfo/ChartName"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
text = "Chart Name:"

[node name="LineEdit" type="LineEdit" parent="Panel/ChartInfo/ChartName"]
margin_left = 83.0
margin_right = 269.0
margin_bottom = 24.0
rect_min_size = Vector2( 186, 0 )
text = "Default"

[node name="BPM" type="HBoxContainer" parent="Panel/ChartInfo"]
margin_top = 46.0
margin_right = 269.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="Panel/ChartInfo/BPM"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "BPM"

[node name="LineEdit" type="LineEdit" parent="Panel/ChartInfo/BPM"]
margin_left = 33.0
margin_right = 267.0
margin_bottom = 24.0
rect_min_size = Vector2( 234, 0 )
text = "128.0"
align = 2

[node name="Difficulty" type="HBoxContainer" parent="Panel/ChartInfo"]
margin_top = 74.0
margin_right = 269.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="Panel/ChartInfo/Difficulty"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "Difficulty"

[node name="LineEdit" type="LineEdit" parent="Panel/ChartInfo/Difficulty"]
margin_left = 61.0
margin_right = 269.0
margin_bottom = 24.0
rect_min_size = Vector2( 208, 0 )
text = "6"
align = 2
placeholder_text = "1-20"

[node name="ChooseSong" type="HBoxContainer" parent="Panel/ChartInfo"]
margin_top = 102.0
margin_right = 269.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="Panel/ChartInfo/ChooseSong"]
margin_top = 3.0
margin_right = 30.0
margin_bottom = 17.0
text = "Song"

[node name="Button" type="Button" parent="Panel/ChartInfo/ChooseSong"]
margin_left = 34.0
margin_right = 268.0
margin_bottom = 20.0
rect_min_size = Vector2( 234, 0 )
text = "Choose file..."

[node name="SongPath" type="Label" parent="Panel/ChartInfo"]
margin_top = 126.0
margin_right = 269.0
margin_bottom = 140.0
text = "Please choose a song file."
align = 2

[node name="NoteSettings" type="VBoxContainer" parent="Panel"]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.666
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/NoteSettings"]
margin_right = 272.0
margin_bottom = 31.0
text = "Note Settings
"
align = 1

[node name="Snap" type="HBoxContainer" parent="Panel/NoteSettings"]
margin_top = 35.0
margin_right = 272.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="Panel/NoteSettings/Snap"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Snap Amount"

[node name="LineEdit" type="LineEdit" parent="Panel/NoteSettings/Snap"]
margin_left = 89.0
margin_right = 272.0
margin_bottom = 24.0
rect_min_size = Vector2( 183, 0 )
text = "0"
align = 2

[node name="Label2" type="Label" parent="Panel/NoteSettings"]
margin_top = 63.0
margin_right = 272.0
margin_bottom = 77.0
text = "Choose Mode"
align = 1

[node name="ChooseMode" type="OptionButton" parent="Panel/NoteSettings"]
margin_top = 81.0
margin_right = 272.0
margin_bottom = 101.0
text = "Add Notes"
items = [ "Add Notes", null, false, 0, null, "Delete Notes", null, false, 1, null, "Modify Notes", null, false, 2, null ]
selected = 0

[node name="AddNotes" type="VBoxContainer" parent="Panel/NoteSettings"]
margin_top = 105.0
margin_right = 272.0
margin_bottom = 125.0

[node name="NoteType" type="HBoxContainer" parent="Panel/NoteSettings/AddNotes"]
margin_right = 272.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Panel/NoteSettings/AddNotes/NoteType"]
margin_top = 3.0
margin_right = 112.0
margin_bottom = 17.0
text = "Choose note type"

[node name="OptionButton" type="OptionButton" parent="Panel/NoteSettings/AddNotes/NoteType"]
margin_left = 116.0
margin_right = 272.0
margin_bottom = 20.0
rect_min_size = Vector2( 156, 0 )
text = "Basic"
items = [ "Basic", null, false, 0, null ]
selected = 0

[node name="Editor Settings" type="VBoxContainer" parent="Panel"]
anchor_top = 0.666
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Editor Settings"]
margin_right = 268.0
margin_bottom = 14.0
text = "Editor Settings"
align = 1

[node name="CheckButton" type="CheckButton" parent="Panel/Editor Settings"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 58.0
text = "Metronome"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Metronome" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="file_selected" from="ChooseSongFile" to="." method="_on_ChooseSongFile_file_selected"]
[connection signal="pressed" from="Panel/ChartInfo/ChooseSong/Button" to="." method="_on_ChooseSong_pressed"]
[connection signal="item_selected" from="Panel/NoteSettings/ChooseMode" to="." method="_on_ChooseMode_item_selected"]
[connection signal="toggled" from="Panel/Editor Settings/CheckButton" to="." method="_on_Metronome_toggled"]
